--- a/www/templates/features/tab-createmessages.html
+++ b/www/templates/features/tab-createmessages.html
@@ -1,13 +1,13 @@
-<ion-view view-title="New Message">
+<ion-view view-title="New Message" ng-controller="CreateMessageCtrl">
 
 <ion-nav-buttons side="right">
   <!-- ng-click="sendMessage()" is currently not attached to anything -->
-  <button class="button button-icon button-clear ion-paper-airplane" ng-click="sendMessage()"></button>
+  <button class="button button-icon button-clear ion-paper-airplane" ng-click="createMessage(message)"></button>
 </ion-nav-buttons>
 
-<ion-content ng-congroller="CreateMessageCtrl">
+<ion-content>
   <div class="list">
-    <form name="createMessage" >
+    <form ng-submit="createMessage(message)">
       <div class="row">
         <div class="col col-30">
           <label class="item item-radio">
@@ -46,13 +46,14 @@
     <div class="row">
       <div class="col col-100">
         <label class="item item-input">
-          <input class="box" type="text" placeholder="Content">
+          <input class="box" ng-model="message.content" type="text" placeholder="Content">
         </label>
       </div>
     </div>
-
+    <button type="submit">Create Message</button>
+    <!-- <button type="submit" ng-click="createMessage(message)" class="button button-primary">TEST!!!</button> -->
     </form>
-    {{message.type}}
+    {{message}}
   </div>
 </ion-content>
 </ion-view>
