--- a/www/templates/features/tab-createmessages.html
+++ b/www/templates/features/tab-createmessages.html
@@ -2,12 +2,12 @@
 
 <ion-nav-buttons side="right">
   <!-- ng-click="sendMessage()" is currently not attached to anything -->
-  <button class="button button-icon button-clear ion-paper-airplane" ng-click="createMessage(message)"></button>
+  <button class="button button-icon button-clear ion-paper-airplane" ng-click="createMessage()"></button>
 </ion-nav-buttons>
 
 <ion-content>
   <div class="list">
-    <form ng-submit="createMessage(message)">
+    <form ng-submit="createMessage()">
       <div class="row">
         <div class="col col-30">
           <label class="item item-radio">
@@ -50,10 +50,10 @@
         </label>
       </div>
     </div>
-    <button type="submit">Create Message</button>
+    <!-- <button type="submit">Create Message</button> -->
     <!-- <button type="submit" ng-click="createMessage(message)" class="button button-primary">TEST!!!</button> -->
     </form>
-    {{message}}
+    <!-- {{message}} -->
   </div>
 </ion-content>
 </ion-view>
