--- a/www/templates/features/tab-payments.html
+++ b/www/templates/features/tab-payments.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Payments">
 <ion-content class="payments">
-<form ng-submit="sendPayment()">
+<form ng-submit="sendPayment()" ng-show="currentUser.venmo_token">
   <label class="item item-input">
     <span class="input-label">Receivers Email</span>
     <input ng-model="payment.receiver_email" type="email" placeholder="someone@gmail.com">
@@ -15,8 +15,10 @@
   </label>
   <button type="submit" class="button button-block button-calm">Send Payment</button>
 </form>
-<a href="#" class="button button-positive button-block" ng-click="venmoLogin()">
+<a href="#" ng-hide="currentUser.venmo_token" class="button button-positive button-block" ng-click="venmoLogin()">
     Connect account to venmo
 </a>
 </ion-content>
 </ion-view>
+
+
