Change icon of star to medal for achievements; create achivementsModal.html; rename tab-profile.html to profileOverviewModal.html; create modal section for achievements in HousemateCtrl

--- a/www/templates/profileOverviewModal.html
+++ b/www/templates/profileOverviewModal.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Profile">
+<ion-modal-view view-title="Profile">
   <ion-header-bar class="bar-header">
     <!-- <div class="buttons"> -->
       <i id="modalBackButton" class="ion-chevron-left icon" ng-click="closeProfileModal()"></i>
@@ -19,7 +19,7 @@
 </div>
 <div class="row" id="profile-icons">
   <div class="col col-33">
-    <i class="ion-ios7-star"></i>
+    <i class="ion-ribbon-a" ng-click=""></i>
     59
   </div>
   <div class="col col-33">
