completed lougout & profile image editing

--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -28,7 +28,7 @@ navigation history that also transitions its views in and out.
   </ion-tab>
 
   <!-- Development Tab -->
-  <ion-tab title="Development Testing" icon-off="ion-ios-flask-outline" icon-on="ion-ios-flask" href="#/tab/development">
+  <!-- <ion-tab title="Development Testing" icon-off="ion-ios-flask-outline" icon-on="ion-ios-flask" href="#/tab/development">
     <ion-nav-view name="tab-development"></ion-nav-view>
-  </ion-tab>
+  </ion-tab> -->
 </ion-tabs>
