--- a/www/templates/features/achievementsModal.html
+++ b/www/templates/features/achievementsModal.html
@@ -1,2 +1,7 @@
 <ion-modal-view>
+  <ion-header-bar class="bar-header">
+    <!-- <div class="buttons"> -->
+    <i id="modalBackButton" class="ion-chevron-left icon" ng-click="closeAchievementsModal()"></i>
+    <h1 class="title">Achievements</h1>
+  </ion-header-bar>
 </ion-modal-view>
