Implement modal slide-in-up for Messages; create messagesModal.html, created modal functions in HousemateCtrl; set up blank page for messagesModal to show messages - need to fill in

--- a/www/templates/profileOverviewModal.html
+++ b/www/templates/profileOverviewModal.html
@@ -23,7 +23,7 @@
         59
       </div>
       <div class="col col-33">
-        <i class="ion-ios7-chatbubble"></i>
+        <i class="ion-ios7-chatbubble" ng-click="openMessagesModal()"></i>
         22
       </div>
       <div class="col col-33">
