--- a/www/templates/profileOverviewModal.html
+++ b/www/templates/profileOverviewModal.html
@@ -19,16 +19,19 @@
     </div>
     <div class="row" id="profile-icons">
       <div class="col col-33">
+        Tasks
         <i class="ion-ribbon-a" ng-click="openAchievementsModal()"></i>
-        59
+        <!-- Insert Tasks Count -->
       </div>
       <div class="col col-33">
-        <i class="ion-ios7-chatbubble" ng-click="openMessagesModal()"></i>
-        22
+        Notifs
+        <i class="ion-chatbox" ng-click="openMessagesModal()"></i>
+        <!-- Insert Notif Count -->
       </div>
       <div class="col col-33">
-        <i class="ion-ios7-people"></i>
-        80
+        Activities
+        <i class="ion-wineglass" ng-click="openActivitiesModal()"></i>
+        <!-- Insert Activities Count -->
       </div>
     </div>
   </ion-content>
