--- a/www/templates/features/tab-development.html
+++ b/www/templates/features/tab-development.html
@@ -68,7 +68,7 @@
 
 <!-- MESSAGE CONTROLLER -->
 <h1 class="title">Message Controller</h1>
-<div ng-controller="MessageCtrl">
+<div ng-controller="CreateMessageCtrl">
 	<button class="button button-positive" ng-click="clickToGetMessages()">Get Messages</button>
 
 	<form ng-submit="getMessage(messageId)">
