Rename title pages for task, notif, activities

--- a/www/templates/features/activitiesModal.html
+++ b/www/templates/features/activitiesModal.html
@@ -2,6 +2,6 @@
   <ion-header-bar class="bar-header">
     <!-- <div class="buttons"> -->
     <i id="modalBackButton" class="ion-chevron-left icon" ng-click="closeActivitiesModal()"></i>
-    <h1 class="title">Activities</h1>
+    <h1 class="title">Activities Attended</h1>
   </ion-header-bar>
 </ion-modal-view>
