--- a/www/templates/profileOverviewModal.html
+++ b/www/templates/profileOverviewModal.html
@@ -25,7 +25,7 @@
       </div>
       <div class="col col-33">
         Notifs
-        <i class="ion-chatbox" ng-click="openMessagesModal()"></i>
+        <i class="ion-chatbox" ng-click="openNotifsModal()"></i>
         <!-- Insert Notif Count -->
       </div>
       <div class="col col-33">
