--- a/www/templates/features/tab-landing.html
+++ b/www/templates/features/tab-landing.html
@@ -72,7 +72,7 @@
 </div>
 
 <!-- Message Detail -->
-<div ng-repeat="message in messages" ng-show="message{{message.id}}">
+<div ng-repeat="message in messages" ng-show="message{{message.id}}" id="target">
   <div class="list card">
     <div class="item item-avatar">
       <img ng-src="{{message.image}}?sz=40">
@@ -128,6 +128,7 @@
      </label>
    </li>
  </ul>
+ <button class="button button-positive button-block" ng-click="logout()">Logout</button>
 </div>
 
   </ion-content>
