--- a/www/templates/features/notifsModal.html
+++ b/www/templates/features/notifsModal.html
@@ -4,4 +4,23 @@
     <i id="modalBackButton" class="ion-chevron-left icon" ng-click="closeNotifsModal()"></i>
     <h1 class="title">Notifs Sent</h1>
   </ion-header-bar>
+    <ion-content class="profile">
+    <div class="row" id="profile-icons">
+      <div class="col col-33">
+        Tasks
+        <i class="ion-ribbon-a" ng-click="openAchievementsModal()"></i>
+        <!-- Insert Tasks Count -->
+      </div>
+      <div class="col col-33">
+        Notifs
+        <i class="ion-chatbox" ng-click="openNotifsModal()"></i>
+        <!-- Insert Notif Count -->
+      </div>
+      <div class="col col-33">
+        Activities
+        <i class="ion-wineglass" ng-click="openActivitiesModal()"></i>
+        <!-- Insert Activities Count -->
+      </div>
+    </div>
+  </ion-content>
 </ion-modal-view>
