filter modal works

--- a/www/templates/features/tab-landing.html
+++ b/www/templates/features/tab-landing.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Welcome to OurHouse">
 <ion-nav-buttons side="left">
-    <button class="button button-icon button-clear ion-navicon-round" ng-click="showFeedFilter()"></button>
+    <button class="button button-icon button-clear ion-navicon-round" ng-click="openfeedFilterModal()"></button>
   </ion-nav-buttons>
   <ion-content class="padding">
     <div class="add-house" ng-show="NoHouse">
