--- a/www/templates/tab-message-detail-modal.html
+++ b/www/templates/tab-message-detail-modal.html
@@ -1,6 +1,6 @@
 <ion-modal-view>
 <!-- Content -->
-<div ng-repeat="message in messages" ng-show="message{{message.id}}" id="target">
+<div ng-repeat="message in messages" ng-show="message{{message.id}}">
   <div class="list card">
     <div class="item item-avatar">
       <img ng-src="{{message.image}}?sz=40">
