Change content to make it side scrolling, insert the content from the individual profile detail modal pages into achievementsModal - plan to rename to generic profileDetailModal page to keep content on single html page

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -3,6 +3,16 @@
   border: 3px solid #69708C;
 }
 
+.slider-slides {
+  padding-top: 3em;
+  height: 41em;
+  text-align: center;
+}
+
+.scroll {
+  height: 100%;
+}
+
 .housemateImage {
   border-radius: 55px;
 }
