Implement sliding view of profile detail to 3rd tab for activities; will implement for notifs

--- a/www/templates/features/achievementsModal.html
+++ b/www/templates/features/achievementsModal.html
@@ -44,7 +44,11 @@
     </ion-slide>
 
     <ion-slide>
-<!--       <ion-content>
+      {{messages}}
+    </ion-slide>
+
+    <ion-slide>
+      <ion-content>
         <div class="row">
           <div class="col col-100">
             <div class="list">
@@ -58,13 +62,7 @@
             </div>
           </div>
         </div>
-      </ion-content> -->
-    </ion-slide>
-
-    <ion-slide>
-      <div class="box pink">
-        Page 3
-      </div>
+      </ion-content>
     </ion-slide>
 </ion-slide-box>
 </ion-modal-view>
