--- a/www/templates/features/achievementsModal.html
+++ b/www/templates/features/achievementsModal.html
@@ -44,7 +44,21 @@
     </ion-slide>
 
     <ion-slide>
-      {{messages}}
+      <ion-content>
+        <div class="row">
+          <div class="col col-100">
+            <div class="list">
+              <div ng-repeat="message in messages | orderBy: 'created_at':true">
+                <a class="item item-avatar {{message.type}} read-{{message.view.read}} removed-{{message.view.removed}}" ng-show="{{message.type}}" ng-if="message.type === 'Notif' && message.user_id === currentUserProfile.id">
+                <img ng-src="{{message.image}}?sz=40">
+                <p>{{message.content}}</p>
+                <p>{{message.created_at | date :'MMMM d, yyyy HH:mm:ss'}}</p>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </ion-content>
     </ion-slide>
 
     <ion-slide>
