fix styling for profile detail icons; need to implement sliding bottom border under each icon to denote which page you are on

--- a/www/templates/features/achievementsModal.html
+++ b/www/templates/features/achievementsModal.html
@@ -5,7 +5,7 @@
         <h1 class="title">Tasks Completed</h1>
       </ion-header-bar>
 
-      <ion-content scrollbar-y="false" locking="true" scrollbar-x="false" scrollbar-y="false">
+      <ion-content class="profile">
         <div class="row" id="profile-icons">
           <div class="col col-33">
             Tasks
@@ -26,7 +26,7 @@
       </ion-content>
   <ion-slide-box>
     <ion-slide>
-      <ion-content class="profile">
+      <ion-content>
         <div class="row">
           <div class="col col-100">
             <div class="list">
