--- a/www/templates/features/tab-createmessages.html
+++ b/www/templates/features/tab-createmessages.html
@@ -13,35 +13,29 @@
           <label class="item item-radio">
             <input type="radio" name="message" ng-model="message.type" value="Task">
             <div class="item-content">
-              Task
+              <strong>Task</strong>
             </div>
-            <i class="radio-icon ion-checkmark"></i>
+            <!-- <i class="radio-icon ion-checkmark"></i> -->
           </label>
         </div>
         <div class="col col-30">
           <label class="item item-radio">
             <input type="radio" name="message" ng-model="message.type" value="Notif">
             <div class="item-content">
-              Notification
+              <strong>Notif</strong>
             </div>
-            <i class="radio-icon ion-checkmark"></i>
+            <!-- <i class="radio-icon ion-checkmark"></i> -->
           </label>
         </div>
         <div class="col col-30">
           <label class="item item-radio">
             <input type="radio" name="message" ng-model="message.type" value="Activity">
             <div class="item-content">
-              Activity
+              <strong>Activity</strong>
             </div>
-            <i class="radio-icon ion-checkmark"></i>
+            <!-- <i class="radio-icon ion-checkmark"></i> -->
           </label>
         </div>
-    <!--   <label class="item item-input">
-        <span class="input-label">
-          Content
-        </span>
-        <input type="text">
-      </label> -->
     </div>
     <div class="row">
       <div class="col col-100">
