--- a/www/templates/features/tab-createmessages.html
+++ b/www/templates/features/tab-createmessages.html
@@ -9,7 +9,7 @@
   <div class="list">
     <form ng-submit="createMessage()">
       <div class="row">
-        <div class="col col-30">
+        <div class="col col-30 col_task">
           <label class="item item-radio">
             <input type="radio" name="message" ng-model="message.type" value="Task">
             <div class="item-content">
@@ -18,7 +18,7 @@
             <!-- <i class="radio-icon ion-checkmark"></i> -->
           </label>
         </div>
-        <div class="col col-30">
+        <div class="col col-30 col_notif">
           <label class="item item-radio">
             <input type="radio" name="message" ng-model="message.type" value="Notif">
             <div class="item-content">
@@ -27,7 +27,7 @@
             <!-- <i class="radio-icon ion-checkmark"></i> -->
           </label>
         </div>
-        <div class="col col-30">
+        <div class="col col-30 col_activity">
           <label class="item item-radio">
             <input type="radio" name="message" ng-model="message.type" value="Activity">
             <div class="item-content">
