Work on create message css

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -86,13 +86,17 @@
   margin-left: 0px;
 }*/
 .col {
-  display: inline-block;
+  display: inline;
 }
 
 .removed-true {
   display: none;
 }
 
+.item-content {
+  text-align: center;
+  font-weight: bold;
+}
 
 #profileImage {
   width: 50%;
