--- a/www/templates/addHousemateModal.html
+++ b/www/templates/addHousemateModal.html
@@ -1,5 +1,5 @@
 <ion-modal-view>
-  <ion-header-bar class="bar-header">
+  <ion-header-bar class="bar-header bar-calm">
     <!-- <div class="buttons"> -->
       <i id="modalBackButton" class="ion-chevron-left icon" ng-click="closeAddHousemateModal()"></i>
   <h1 class="title">Add New Housemate:</h1>
