--- a/www/templates/filterModal.html
+++ b/www/templates/filterModal.html
@@ -1,5 +1,5 @@
 <ion-modal-view>
-  <ion-header-bar align-title="left" class="bar-stable">
+  <ion-header-bar align-title="left" class="bar-stable bar-calm">
   <div class="buttons">
     <i id="modalBackButton" class="ion-chevron-left" ng-click="closeFilterModal()"></i>
   </div>
