--- a/www/templates/viewFeedFilterHome.html
+++ b/www/templates/viewFeedFilterHome.html
@@ -1,5 +1,5 @@
 <ion-modal-view>
-<ion-header-bar class="bar-header">
+<ion-header-bar class="bar-header bar-calm">
   <i id="modalBackButton" class="ion-chevron-left icon" ng-click="closefeedFilterModal(Activity, Notif, Task)"></i>
   <h1 class="title">Filter:</h1>
 </ion-header-bar>
