--- a/www/templates/tab-profile.html
+++ b/www/templates/tab-profile.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Profile">
-  <ion-header-bar class="bar-header">
+  <ion-header-bar class="bar-header bar-calm">
     <!-- <div class="buttons"> -->
       <i id="modalBackButton" class="ion-chevron-left icon" ng-click="closeProfileModal()"></i>
   <h1 class="title">Profile</h1>
