Complete sliding feature of task details; implemented helper functions in controller to update and maintain the current index of the slides; dynamically tied class and styling based on the index of the slide; Add purple button to profileOverview page

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -3,8 +3,17 @@
   border: 3px solid #69708C;
 }
 
+#first-tab {
+  border-bottom: 1px solid black;
+}
+
+.detail-icon-active {
+  padding-bottom: 3px;
+  border-bottom: .2em solid lightgray;
+}
+
 .slider-slides {
-  padding-top: 4em;
+  padding-top: 5em;
   height: 41em;
   text-align: center;
 }
