Fix detail icon highlighting to blue, fix nonresponsive back button on profiledetail page

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -3,6 +3,12 @@
   border: 3px solid #69708C;
 }
 
+.ion-ios7-paper, .ion-ios7-chatboxes, .ion-ios7-people {
+  color: #0066FF;
+}
+
+
+
 #first-tab {
   border-bottom: 1px solid black;
 }
