--- a/www/templates/features/profileDetailModal.html
+++ b/www/templates/features/profileDetailModal.html
@@ -1,6 +1,5 @@
 <ion-modal-view>
       <ion-header-bar class="bar-header">
-        <!-- <div class="buttons"> -->
         <i id="modalBackButton" class="ion-chevron-left icon" ng-click="closeProfileDetailModal()"></i>
       </ion-header-bar>
 
@@ -12,21 +11,14 @@
 
       <ion-content class="profile">
         <div class="row" id="profile-icons">
-
-          <div class="col col-33" ng-click="slideTo(1)">
-             <!-- {{firstTab}} -->
-            <i ng-class="{'ion-ribbon-a': 1==1, 'detail-icon-active': firstTab==true}"></i>
-            <!-- Insert Tasks Count -->
+          <div class="col col-33">
+            <i ng-class="{'ion-ios7-paper-outline': firstTab!=true, 'detail-icon-active': firstTab==true, 'ion-ios7-paper': firstTab==true}"></i>
           </div>
           <div class="col col-33">
-             <!-- {{secondTab}} -->
-            <i ng-click="slideTo(2)" ng-class="{'ion-chatbox': 1==1, 'detail-icon-active': secondTab==true}"></i>
-            <!-- Insert Notif Count -->
+            <i ng-class="{'ion-ios7-chatboxes-outline': secondTab!=true, 'detail-icon-active': secondTab==true, 'ion-ios7-chatboxes': secondTab==true}"></i>
           </div>
           <div class="col col-33">
-             <!-- {{thirdTab}} -->
-            <i ng-click="slideTo(3)" ng-class="{'ion-wineglass': 1==1, 'detail-icon-active': thirdTab==true}"></i>
-            <!-- Insert Activities Count -->
+            <i ng-class="{'ion-ios7-people-outline': thirdTab!=true, 'detail-icon-active': thirdTab==true, 'ion-ios7-people': thirdTab==true}"></i>
           </div>
         </div>
       </ion-content>
