--- a/www/templates/features/tab-createmessages.html
+++ b/www/templates/features/tab-createmessages.html
@@ -12,21 +12,21 @@
         <div class="col col-30 col_task">
           <label class="item item-radio">
             <input type="radio" name="message" ng-model="message.type" value="Task">
-            <div class="item-content">Task</div>
+            <div class="item-content" id="task_text">Task</div>
             <!-- <i class="radio-icon ion-checkmark"></i> -->
           </label>
         </div>
         <div class="col col-30 col_notif">
           <label class="item item-radio">
             <input type="radio" name="message" ng-model="message.type" value="Notif">
-            <div class="item-content">Notif</div>
+            <div class="item-content" id="notif_text">Notif</div>
             <!-- <i class="radio-icon ion-checkmark"></i> -->
           </label>
         </div>
         <div class="col col-30 col_activity">
           <label class="item item-radio">
             <input type="radio" name="message" ng-model="message.type" value="Activity">
-            <div class="item-content">Activity</div>
+            <div class="item-content" id="activity_text">Activity</div>
             <!-- <i class="radio-icon ion-checkmark"></i> -->
           </label>
         </div>
