--- a/www/templates/features/profileDetailModal.html
+++ b/www/templates/features/profileDetailModal.html
@@ -17,7 +17,7 @@
           <div class="col col-33">
             <i ng-class="{'ion-ios7-chatboxes-outline': secondTab!=true, 'detail-icon-active': secondTab==true, 'ion-ios7-chatboxes': secondTab==true}"></i>
           </div>
-          <div class="col col-33">
+          <div class="col col-33 test">
             <i ng-class="{'ion-ios7-people-outline': thirdTab!=true, 'detail-icon-active': thirdTab==true, 'ion-ios7-people': thirdTab==true}"></i>
           </div>
         </div>
