--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -21,7 +21,7 @@ navigation history that also transitions its views in and out.
   </ion-tab>
 
   <!-- Housemates Tab -->
-  <ion-tab class="style_tabs" title="Housemates" icon-off="ion-ios7-people" icon-on="ion-ios7-people" href="#/tab/housemates">
+  <ion-tab class="style_tabs" title="Housemates" id="notBlue" icon-off="ion-ios7-people" icon-on="ion-ios7-people" href="#/tab/housemates">
     <ion-nav-view name="tab-housemates"></ion-nav-view>
   </ion-tab>
 
