--- a/platforms/ios/www/templates/features/tab-payments.html
+++ b/platforms/ios/www/templates/features/tab-payments.html
@@ -1,17 +1,17 @@
 <ion-view view-title="Payments">
 <ion-content class="payments">
 <ion-refresher on-refresh="doRefresh()"></ion-refresher>
-<form ng-submit="sendPayment()" ng-show="currentUser.venmo_token" class="animated fadeInDown">
+<form ng-submit="sendPayment(receiverEmail)" ng-show="currentUser.venmo_token" class="animated fadeInDown">
   <label class="item item-input">
-    <span class="input-label">Receivers Email</span>
-    <input ng-model="payment.receiver_email" type="email" placeholder="someone@gmail.com">
+    <span class="input-label">Payment To:</span>
+    <select ng-options="housemate.name for housemate in housemates " ng-model="receiverEmail"></select>
   </label>
   <label class="item item-input">
-    <span class="input-label">Amount</span>
+    <span class="input-label">Amount:</span>
     <input ng-model="payment.amount" type="text" placeholder="$10.00">
   </label>
   <label class="item item-input">
-    <span class="input-label">Note</span>
+    <span class="input-label">Note:</span>
     <input ng-model="payment.note" type="text" placeholder="Electric bill">
   </label>
   <button type="submit" class="button button-block button-calm">Send Payment</button>
